my-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ingress
  labels:
    app: my-ingress
spec:
  ports:
  - port: 80
  selector:
    app: my-ingress
  type: LoadBalancer
